# routers/album.js
@@ -2,9 +2,11 @@ const router = require('express').Router()
 const config = require('../config')
 const MongoDBService = require(config.common('./services/MongoDBService'))
 const Album = require(config.common('./models/Album'))
+// const Photo = require(config.common('./models/Photo'))
 const albumDB = new Album(MongoDBService.colls.albums)
 
-const idLength = 64
+const defaultDetails = 'minimal'
+const defaultProjection = 'apiMinimal'
 
 require('express-async-errors')
 
@@ -16,22 +18,45 @@ router.use(cacheControl({
 
 router.get('/:id', async (req, res) => {
   const id = req.params.id
-  if (typeof id !== 'string' || id.length !== idLength) {
+  if (!Album.validateId(id)) {
     return res.status(400).end()
   }
   // includeId
   const includeId = Boolean(req.query.includeId)
   // details
-  const details = (req.query.details || 'basic').toLowerCase()
+  const details = (req.query.details || defaultDetails).toLowerCase()
   let projection = ['api', details[0].toUpperCase() + details.slice(1)].join('')
-  if (!(projection in Album.projections)) projection = 'apiBasic'
+  if (!(projection in Album.projections)) projection = defaultProjection
   const album = await albumDB.findOne(id, Album.projections[projection])
   // ret
   if (album) {
-    return res.status(200).json(Album.publicTransform(album, details, includeId))
+    return res.status(200).json(Album.publicTransform(album, details, { includeId }))
   } else {
     return res.status(404).json({})
   }
+})
+
+router.get('/in/:albumId', async (req, res) => {
+  const albumId = req.params.albumId
+  if (!Album.validateId(albumId)) {
+    return res.status(400).end()
+  }
+  // pagination
+  const skip = parseInt(Number(req.query.skip || 0))
+  const limit = Math.min(parseInt(Number(req.query.limit || 0)) || 60, 60)
+  const sort = { created: 1 }
+  // details
+  const details = (req.query.details || defaultDetails).toLowerCase()
+  let projection = ['api', details[0].toUpperCase() + details.slice(1)].join('')
+  if (!(projection in Album.projections)) projection = defaultProjection
+  const cursor = await albumDB.find({ albumId }, Album.projections[projection], { sort, skip, limit, toArray: false, count: false })
+  // ret
+  return res.status(200).json({
+    count: await cursor.count(),
+    skip,
+    limit,
+    items: (await cursor.toArray()).map((item) => Album.publicTransform(item, details))
+  })
 })
 
 module.exports = router
